AC_PREREQ([2.61])
dnl Don't forget when updating version number to do GP_CHECK_GEANY also
AC_INIT([geany-plugins], [0.21])
AM_INIT_AUTOMAKE([1.8 foreign dist-bzip2 tar-ustar])

m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AC_CONFIG_SRCDIR([po/POTFILES.in])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([build/cache])

AC_PROG_CC
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

dnl i18n
IT_PROG_INTLTOOL([0.35.0])
GP_I18N

dnl common checks
GP_CHECK_GEANY(0.20)
GP_CHECK_UNITTESTS(0.9.4)
GP_CHECK_CPPCHECK
GP_CHECK_CFLAGS

dnl plugin checks
GP_CHECK_ADDONS
GP_CHECK_CODENAV
GP_CHECK_DEBUGGER
GP_CHECK_DEVHELP
GP_CHECK_GEANYCFP
GP_CHECK_GEANYDOC
GP_CHECK_GEANYEXTRASEL
GP_CHECK_GEANYGDB
GP_CHECK_GEANYGENDOC
GP_CHECK_GEANYINSERTNUM
GP_CHECK_GEANYLATEX
GP_CHECK_GEANYLIPSUM
GP_CHECK_GEANYLUA
GP_CHECK_GEANYPG
GP_CHECK_GEANYPRJ
GP_CHECK_GEANYSENDMAIL
GP_CHECK_GEANYVC
GP_CHECK_PRETTYPRINTER
GP_CHECK_SHIFTCOLUMN
GP_CHECK_SPELLCHECK
GP_CHECK_TREEBROWSER
GP_CHECK_TABLECONVERT
GP_CHECK_UPDATECHECKER
GP_CHECK_WEBHELPER

AC_CONFIG_FILES([
    Makefile
    po/Makefile.in
])
AC_OUTPUT
GP_STATUS_PRINT
