AC_PREREQ([2.61])
dnl Don't forget when updating version number to do GP_CHECK_GEANY also
AC_INIT([geany-plugins], [2.2])

AC_CONFIG_SRCDIR([po/POTFILES.in])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([build/cache])
AC_CONFIG_AUX_DIR([build/build-aux])

AM_INIT_AUTOMAKE([1.8 foreign dist-bzip2 tar-ustar subdir-objects])

m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AC_USE_SYSTEM_EXTENSIONS
AC_PROG_CC
AC_PROG_CC_C99
AM_PROG_CC_C_O
LT_INIT([disable-static])

dnl i18n, inline so autoreconf can detect gettext usage
AM_GNU_GETTEXT_VERSION([0.19.8])
AM_GNU_GETTEXT([external])
AC_SUBST([GETTEXT_PACKAGE],[$PACKAGE])
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$PACKAGE"], [Gettext package.])

dnl common checks
GP_CHECK_GEANY(2.1)
GP_CHECK_UNITTESTS(0.9.4)
GP_CHECK_GTK_VERSION
GP_CHECK_CPPCHECK
GP_CHECK_CFLAGS
GP_CHECK_LDFLAGS
GP_CHECK_MINGW

dnl plugin checks
GP_CHECK_ADDONS
GP_CHECK_AUTOCLOSE
GP_CHECK_AUTOMARK
GP_CHECK_CODENAV
GP_CHECK_COMMANDER
GP_CHECK_DEBUGGER
GP_CHECK_DEFINEFORMAT
GP_CHECK_EXTERNALTOOLS
GP_CHECK_GEANYCTAGS
GP_CHECK_GEANYDOC
GP_CHECK_GEANYEXTRASEL
GP_CHECK_GEANYGENDOC
GP_CHECK_GEANYINSERTNUM
GP_CHECK_LATEX
GP_CHECK_GEANYLUA
GP_CHECK_GEANYMACRO
GP_CHECK_GEANYMINISCRIPT
GP_CHECK_GEANYNUMBEREDBOOKMARKS
GP_CHECK_GEANYPRJ
GP_CHECK_GEANYVC
GP_CHECK_GEANYPG
GP_CHECK_GENIUSPASTE
GP_CHECK_GITCHANGEBAR
GP_CHECK_KEYRECORD
GP_CHECK_LINEOPERATIONS
GP_CHECK_LIPSUM
GP_CHECK_LSP
GP_CHECK_MARKDOWN
GP_CHECK_OVERVIEW
GP_CHECK_PAIRTAGHIGHLIGHTER
GP_CHECK_POHELPER
GP_CHECK_PRETTYPRINTER
GP_CHECK_PROJECTORGANIZER
GP_CHECK_SCOPE
GP_CHECK_SENDMAIL
GP_CHECK_SHIFTCOLUMN
GP_CHECK_SPELLCHECK
GP_CHECK_TREEBROWSER
GP_CHECK_TABLECONVERT
GP_CHECK_UPDATECHECKER
GP_CHECK_VIMODE
GP_CHECK_WEBHELPER
GP_CHECK_WORKBENCH
GP_CHECK_XMLSNIPPETS

GP_COMMIT_UTILSLIB_STATUS

AC_CONFIG_FILES([
    Makefile
    po/Makefile.in
])
AC_OUTPUT
GP_STATUS_PRINT
