option('addons', type: 'feature', value: 'auto', description: 'Geany plugin: addons')
option('autoclose', type: 'feature', value: 'auto', description: 'Geany plugin: autoclose')
option('automark', type: 'feature', value: 'auto', description: 'Geany plugin: automark')
option('codenav', type: 'feature', value: 'auto', description: 'Geany plugin: codenav')
option('commander', type: 'feature', value: 'auto', description: 'Geany plugin: commander')
option('debugger', type: 'feature', value: 'auto', description: 'Geany plugin: debugger')
option('defineformat', type: 'feature', value: 'auto', description: 'Geany plugin: defineformat')
option('geanyctags', type: 'feature', value: 'auto', description: 'Geany plugin: geanyctags')
option('geanydoc', type: 'feature', value: 'auto', description: 'Geany plugin: geanydoc')
option('geanyextrasel', type: 'feature', value: 'auto', description: 'Geany plugin: geanyextrasel')
option('geanygendoc', type: 'feature', value: 'auto', description: 'Geany plugin: geanygendoc')
option('geanyinsertnum', type: 'feature', value: 'auto', description: 'Geany plugin: geanyinsertnum')
option('geanylua', type: 'feature', value: 'auto', description: 'Geany plugin: geanylua')
option('geanymacro', type: 'feature', value: 'auto', description: 'Geany plugin: geanymacro')
option('geanyminiscript', type: 'feature', value: 'auto', description: 'Geany plugin: geanyminiscript')
option('geanynumberedbookmarks', type: 'feature', value: 'auto', description: 'Geany plugin: geanynumberedbookmarks')
option('geanypg', type: 'feature', value: 'auto', description: 'Geany plugin: geanypg')
option('geanyprj', type: 'feature', value: 'auto', description: 'Geany plugin: geanyprj')
option('geanyvc', type: 'feature', value: 'auto', description: 'Geany plugin: geanyvc')
option('geniuspaste', type: 'feature', value: 'disabled', description: 'Geany plugin: geniuspaste')
option('git-changebar', type: 'feature', value: 'auto', description: 'Geany plugin: git-changebar')
option('keyrecord', type: 'feature', value: 'auto', description: 'Geany plugin: keyrecord')
option('latex', type: 'feature', value: 'auto', description: 'Geany plugin: latex')
option('lineoperations', type: 'feature', value: 'auto', description: 'Geany plugin: lineoperations')
option('lipsum', type: 'feature', value: 'auto', description: 'Geany plugin: lipsum')

option('markdown', type: 'feature', value: 'auto', description: 'Geany plugin: markdown')
option('discount', type: 'feature', value: 'auto', description: 'markdown library')

option('overview', type: 'feature', value: 'auto', description: 'Geany plugin: overview')
option('pairtaghighlighter', type: 'feature', value: 'auto', description: 'Geany plugin: pairtaghighlighter')
option('pohelper', type: 'feature', value: 'auto', description: 'Geany plugin: pohelper')
option('pretty-printer', type: 'feature', value: 'auto', description: 'Geany plugin: pretty-printer')
option('projectorganizer', type: 'feature', value: 'auto', description: 'Geany plugin: projectorganizer')
option('scope', type: 'feature', value: 'auto', description: 'Geany plugin: scope')
option('sendmail', type: 'feature', value: 'auto', description: 'Geany plugin: sendmail')
option('shiftcolumn', type: 'feature', value: 'auto', description: 'Geany plugin: shiftcolumn')
option('spellcheck', type: 'feature', value: 'auto', description: 'Geany plugin: spellcheck')
option('tableconvert', type: 'feature', value: 'auto', description: 'Geany plugin: tableconvert')
option('treebrowser', type: 'feature', value: 'auto', description: 'Geany plugin: treebrowser')
option('updatechecker', type: 'feature', value: 'disabled', description: 'Geany plugin: updatechecker')
option('vimode', type: 'feature', value: 'auto', description: 'Geany plugin: vimode')
option('webhelper', type: 'feature', value: 'auto', description: 'Geany plugin: webhelper')
option('workbench', type: 'feature', value: 'auto', description: 'Geany plugin: workbench')
option('xmlsnippets', type: 'feature', value: 'auto', description: 'Geany plugin: xmlsnippets')
